# nyt-crossword-remarkable

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
design_handoff_remarkable_crossword/: README.md
design_handoff_remarkable_crossword/prototype/: Ryans Remarkable.html  activity-grid.jsx  app.jsx  components.jsx  dashboard.jsx  data.jsx  settings.jsx  styles.css  wizard.jsx
docs/superpowers/plans/: 2026-04-23-backend-api.md  2026-04-23-backend-cli.md  2026-04-23-frontend.md
docs/superpowers/specs/: 2026-04-23-technical-design.md  2026-04-23-ui-design-brief.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  global.css  tokens.css  types.ts
frontend/src/components/: DowPicker.css  DowPicker.tsx  Masthead.css  Masthead.tsx  StatusPill.css  StatusPill.tsx
frontend/src/dashboard/: ActivityGrid.css  ActivityGrid.tsx  AutoFetchAside.css  AutoFetchAside.tsx  Cell.css  Cell.tsx  CellTip.css  CellTip.tsx  Dashboard.css  Dashboard.tsx  DowView.tsx  GridToolbar.css  GridToolbar.tsx  Legend.css  Legend.tsx  ProgressStrip.css  ProgressStrip.tsx  WeekView.tsx
frontend/src/settings/: SettingsDrawer.css  SettingsDrawer.tsx
frontend/src/wizard/: Wizard.css  Wizard.tsx
src/nyt_crossword_remarkable/: __init__.py  __main__.py  cli.py  config.py  server.py
tests/: test_api.py  test_cli.py  test_config.py  test_fetch_state.py  test_history.py  test_nyt_fetcher.py  test_nyt_login.py  test_orchestrator.py  test_remarkable.py  test_rmapi_installer.py  test_scheduler.py  test_server.py
(+18 files in other folders)
