[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nyt-crossword-remarkable"
version = "0.1.0"
description = "Automatically deliver the daily NYT crossword to your reMarkable tablet"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "apscheduler>=4.0.0a1",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "respx>=0.21.0",
    "pytest-asyncio>=0.23.0",
]
server = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "sse-starlette>=2.0.0",
    "libgen-api-enhanced>=1.0.0",
    "pikepdf>=8.0.0",
    "pypdf>=4.0.0",
]

[project.scripts]
nyt-crossword-remarkable = "nyt_crossword_remarkable.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/nyt_crossword_remarkable"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
